display cast album images to index page

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,1 +1,5 @@
-Hello!
+<% @albums.each do | album | %>
+  <div class='album_cover'>
+    <%= image_tag(album['images'][0]['url'], alt: 'cast album') %>
+  </div>
+<% end %>
