--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,5 +1,5 @@
 <% @albums.each do | album | %>
-  <div class='album_cover'>
-    <%= image_tag(album['images'][0]['url'], alt: 'cast album') %>
+  <div>
+    <%= image_tag(album['images'][0]['url'], alt: 'cast album', class: 'album_cover') %>
   </div>
 <% end %>
