--- a/app/assets/stylesheets/albums.css
+++ b/app/assets/stylesheets/albums.css
@@ -2,3 +2,10 @@
   width: 300px;
   height: 300px;
 }
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
